Add DFS Iterator and DFS Tests